# Trajectory-Simulator

./: Cargo.toml  LICENSE.txt  README.md  requirements.txt  results_analyzer.py  results_equation_generator.py
results/: equation.txt  polynomial.txt  results.csv
src/: constants.rs  main.rs  math_helpers.rs  simulation_helpers.rs
src/integrators/: euler.rs  leapfrog.rs  mod.rs  physics_helpers.rs
src/solvers/: bisection.rs
