[package]
name = "trajectory_simulator"
edition = "2021"

# See https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
strip = "symbols"
lto = true
panic = "abort"
codegen-units = 1

[profile.release.package."*"]
inherits = "release"

[profile.release.build-override]
inherits = "release"

[lints.clippy]
pedantic = {level = "warn", priority = -1}

cast_possible_truncation = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"
